fixing readme again

--- a/README.Rmd
+++ b/README.Rmd
@@ -49,6 +49,8 @@ reticulate::py_install(c("asleep", "argparse", "numpy", "pandas"),
 Once this is finished, you should be able to check this via:
 
 ```{r, eval = FALSE}
+envname = "asleep"
+reticulate::use_condaenv(envname)
 asleep::have_asleep()
 ```
 
